Systemsteuerungszweig System. IT-Firmen können so mit wenigen Klicks ihren (virtuellen) 
Firmenstempel auf dem Kunden PC hinterlassen."


History
--------

Version 3.2 [??.06.15]

- Verwendung des TaskDialogs (ab Vista)
- Menü-Eintrag "Einträge anzeigen" von "Bearbeiten" nach "Ansicht" verschoben
- .ini/.reg Datei Parser v1.1 mit Multi-Line support
- Verwendung von Unicode 
- OSUtils v2.1
- Updater v2.3

----------------------------------------

Version 3.1 [10.01.15]

- Eigener INI Datei Parser für .reg Datei Import/Export
- Neues Manifest
- Update-Funktion v2.2
- OSUtils v2.0

----------------------------------------

Version 3.0 [03.10.14]

- API Version 3.1
- Neuer Icon
- Oranges Hintergrund-Bild entfernt und durch Einfärben der Form ersetzt
- Doppelklick auf URL-Textfeld öffnet URL im Webbrowser
- "Logo auswählen"-Dialog startet im Bilder-Verzeichnis des Benutzers
  - Ausgewähltes Logo muss keine bestimmten Maße mehr haben
- "Logo kopieren"-Funktion verwendet nun "Speichern unter"-Dialog
- Mutex hinzugefügt
- Update-Funktion v2.1
- "Speichern unter"-Dialog beim Herunterladen des Zertifikats entfernt
- Sonstige kleinere Verbesserungen

----------------------------------------

Version 2.1 [24.07.13]

- API Version 3
- Änderungen im GUI
- Button "Anzeigen" hinzugefügt
  - zeigt die Herstellerinformationen
- neue Funktion: "Logo kopieren"
- kleinere Bug fixes

----------------------------------------

Version 2.0.1 [25.04.13]

- Sprachunterstützung für Englisch und Französisch hinzugefügt
- Support für Windows 8
- Update-Funktion verbessert
- Änderungen im Fenstermanagement

----------------------------------------

Version 2.0 (NT) [19.10.12]

- SIT NT: Source Code größtenteils neugeschrieben
  - weiterhin Lite Version 
  - API Version 2
- Menü um einige Funktionen erweitert
  - "Datei": 
    - Eingaben und Einträge können getrennt exportiert werden
  - "Bearbeiten": 
    - Eingaben und Einträge können getrennt gelöscht werden