@@ -14,7 +14,8 @@ Version 3.2 [??.06.15]
 - Verwendung des TaskDialogs (ab Vista)
 - Menü-Eintrag "Einträge anzeigen" von "Bearbeiten" nach "Ansicht" verschoben
 - .ini/.reg Datei Parser v1.1 mit Multi-Line support
-- Verwendung von Unicode 
+- Sprache wird nun benutzerspezifisch gesetzt
+- Unterstützung für Unicode
 - OSUtils v2.1
 - Updater v2.3
 
@@ -162,4 +163,4 @@ Erste Version von SIT (alias "Supportinfo-Tool")
 SIT wurde unter der BSD-Lizenz veröffentlicht und ist somit Open-Source. Der Quelltext kann auf der Website heruntergeladen werden.
 Soll SIT auf eine kommerzielle CD-ROM (mit Magazin) gepresst werden, wäre es nett, mir eine Ausgabe dieser CD-ROM (mit Magazin) zu schicken. Meine Adresse erfahren Sie unter team@pm-codeworks.de .
 
-05/2015
+06/2015
